--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
   <section class="terjual" id="terjual">
     <div class="title" data-aos="flip-up">
       <!-- <h2 class="titletext">Jelly Gamat Gold-G Asli</h2> -->
-      <p>"Ratusan ribu orang telah merasakan keberhasilan mengatasi penyakit mereka. Inilah yang mendorong kami untuk lebih berupaya memperkenalkan produk kesehatan ini di Indonesia,” </p>p
+      <p>"Ratusan ribu orang telah merasakan keberhasilan mengatasi penyakit mereka. Inilah yang mendorong kami untuk lebih berupaya memperkenalkan produk kesehatan ini di Indonesia,” </p>
       <div class="container">
         <img src="img/indonesia1.jpeg" alt="">
       </div>
