--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
     <div class="title" data-aos="flip-up">
       <!-- <h2 class="titletext">Jelly Gamat Gold-G Asli</h2> -->
       <p>"Ratusan ribu orang telah merasakan keberhasilan mengatasi penyakit mereka. Inilah yang mendorong kami untuk lebih berupaya memperkenalkan produk kesehatan ini di Indonesia,” </p>
+      <a href="#p" class="btn">Tanya Penjual</a>
       <div class="container">
         <img src="img/indonesia1.jpeg" alt="">
       </div>
