--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="img/gamat.jpg" class="starbucks">
       </div>
       <div class="textBox">
-        <h2>Jelly Gamat <br> <span>Gold-G</span> </h2>
+        <h2><span> Jelly Gamat <br> Gold-G</span> </h2>
         <p>Jelly gamat Gold-G merupakan suplemen herbal yang terbuat dari teripang timun laut untuk mempercepat
           penyembuhan luka, meredakan sakit karena kolesterol, darah tinggi, diabetes. Berkhasiat  menjaga, merawat dan memulihkan kesehatan tubuh dan organ dalam</p>
         <a href="#pricing" class="btn">Pesan Sekarang</a>
