--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
       </div>
       <div class="textBox">
         <h2><span> Jelly Gamat <br> Gold-G</span> </h2>
-        <p>Jelly gamat Gold-G merupakan suplemen herbal yang terbuat dari teripang timun laut untuk mempercepat
-          penyembuhan luka, meredakan sakit karena kolesterol, darah tinggi, diabetes. Berkhasiat  menjaga, merawat dan memulihkan kesehatan tubuh dan organ dalam</p>
+        <p>Lebih mudah dan murah beli jelly gamat di jelly gamat online</p>
         <a href="#pricing" class="btn">Pesan Sekarang</a>
       </div>
     </div>
