--- a/index.html
+++ b/index.html
@@ -10,32 +10,30 @@
 
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-195202835-2">
+  </script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-195202835-2');
+</script>
+
 </head>
 
 <body>
-  <header>
-    <a href="#" class="logo">Jelly Gamat Gold-G<span>.</span></a>
-    <div class="menuToggle" onclick="toggleMenu();"></div>
-    <ul class="navigation">
-      <li><a href="#banner" onclick="toggleMenu();">Menu</a></li>
-      <li><a href="#about" onclick="toggleMenu();">Gamat</a></li>
-      <li><a href="#menu" onclick="toggleMenu();">Manfaat</a></li>
-      <li><a href="#pertanyaan" onclick="toggleMenu();">Pertanyaan</a></li>
-      <li><a href="#legalitas" onclick="toggleMenu();">Legalitas</a></li>
-      <li><a href="#pricing" onclick="toggleMenu();">Harga</a></li>
-    </ul>
-  </header>
-
 
   <!-- awal banner -->
   <section class="banner" id="banner">
     <div class="content" data-aos="fade-right">
       <div class="imgBox">
-        <img src="img/gamat.jpg" class="starbucks">
+        <img src="img/gamat.jpg" alt="jelly gamat gold-g online">
       </div>
       <div class="textBox">
         <h2><span> Jelly Gamat <br> Gold-G</span> </h2>
-        <p>Lebih mudah dan murah beli jelly gamat di jelly gamat online</p>
+        <p>Rasakan kemudahan khasiat dan manfaat jelly gamat. <br> Lebih mudah dan murah beli jelly gamat di jelly gamat online. <br> Bermanfaat meredakan sakit karena kolesterol, darah tinggi, diabetes. Berkhasiat  menjaga, merawat dan memulihkan kesehatan tubuh, pencernaan dan organ dalam serta berbagai manfaat lainnya</p>
         <a href="#pricing" class="btn">Pesan Sekarang</a>
       </div>
     </div>
@@ -69,7 +67,7 @@
       </div>
       <div class="col50">
         <div class="imgBx">
-          <img src="img/teripang.jpg" alt="Jelly Gamat Gold G">
+          <img src="img/teripang.jpg" alt="manfaat gamat teripag timun laut">
         </div>
       </div>
     </div>
@@ -84,41 +82,41 @@
       <div class="container">
         <div class="card">
           <div class="imgBx">
-            <img src="img/5f8cfac3e7966.jpg" alt="">
+            <img src="img/5f8cfac3e7966.jpg" alt="manfaat protein pada gaamat">
           </div>
           <div class="contentBx">
             <div class="content">
               <ul>
                 <p>Protein yang tinggi pada gamat melindugni dari penyakit kardiovaskular</p>
                 <p>Mengobati dan meredakan penyakit Jantung & Stroke</p>
-                <p>Menjaga dan memulihkan kesehatan organ Hati, Ginjal, Lambung dan organ lainnya</p> <br> <br>
+                <p>Menjaga dan memulihkan kesehatan organ Hati, Ginjal, Lambung dan organ lainnya</p>
               </ul>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="imgBx">
-            <img src="img/kolesterol.jpeg" alt="">
+            <img src="img/kolesterol.jpeg" alt="manfaat lemak sehat pada gamat">
           </div>
           <div class="contentBx">
             <div class="content">
               <ul>
                 <p>Mengandung lemak sehat yang mengurangi kadar kolesterol</p>
                 <p>Membersihkan saluran darah, mempercepat pembangunan jaringan sel tubuh</p>
-                <p>Menunjang kinerja vitamin, mineral yang diserap tubuh</p> <br> <br> <br>
+                <p>Menunjang kinerja vitamin, mineral yang diserap tubuh</p>
               </ul>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="imgBx">
-            <img src="img/kolagen.jpg" alt="">
+            <img src="img/kolagen.jpg" alt="manfaat kolagen pada gamat">
           </div>
           <div class="contentBx">
             <div class="content">
               <ul>
-                <p>Rantai asam lemak tak jenuh dan kolagen pada gamat bernmanfaat untuk menumbuhkan jaringan tubuh saat luka</p> <br>
-                <p>Mempercepat pembentukan lapisan kulit (luka luar dan dalam) seperti luka sehabis operasi</p> <br> <br> <br>
+                <p>Rantai asam lemak tak jenuh dan kolagen pada gamat bernmanfaat untuk menumbuhkan jaringan tubuh saat luka</p>
+                <p>Mempercepat pembentukan lapisan kulit (luka luar dan dalam) seperti luka sehabis operasi</p>
               </ul>
             </div>
           </div>
@@ -134,7 +132,7 @@
       <div class="list">
         <div class="item">
           <div class="question">
-            Jelly gamat gold terbuat dari bahan apa ?
+            Jelly gamat terbuat dari bahan apa ?
             <span>
               <span>+</span>
               <span>-</span>
@@ -202,7 +200,7 @@
           </div>
           <div class="answer">
             <p>Dosis konsumsi jelly gamat pada orang dewasa adalah 2 kali sehari 2 – 3 sendok makan dan diminum setelah makan</p>
-            <p>jelly gamat juga dapat dikonsumsi oleh bayi dan anak-anak. Pada bayi minimal 2 bulan, bisa mengonsumsi jelly gamat 2 kali sehari dengan takaran ½ sendok teh dan dikonsumsi setelah makan. <br> <br> Sedangkan pada anak-anak, jelly gamat dapat dikonsumsi dengan dosis 2 kali sehari 1 – 2 sendok teh dan dikonsumsi setelah makan.</p>
+            <p>Jelly gamat juga dapat dikonsumsi oleh bayi dan anak-anak. Pada bayi minimal 2 bulan, bisa mengonsumsi jelly gamat 2 kali sehari dengan takaran ½ sendok teh dan dikonsumsi setelah makan. <br> <br> Sedangkan pada anak-anak, jelly gamat dapat dikonsumsi dengan dosis 2 kali sehari 1 – 2 sendok teh dan dikonsumsi setelah makan.</p>
           </div>
         </div>
       </div>
@@ -232,7 +230,7 @@
       <h2 class="titletext">Jelly Gamat Gold-G Asli</h2>
       <p>Jelly Gamat yang asli sudah memiliki izin dan terdaftar di situs resmi Badan Pengawan Obat dan Makanan Republik Indonesia (BPOM)
       <div class="container">
-        <img src="img/bpom.png" alt="">
+        <img src="img/bpom.png" alt="gamat asli terdaftar pada badan pengawan obat dan makanan republik Indonesia">
       </div>
     </div> 
   </section>
@@ -258,7 +256,7 @@
               <li>harga asli Rp. 180.000</li>
             </ul>
             <div class="btn-wrap">
-              <a href="#" class="btn-buy">PESAN</a>
+              <a href="https://tokoko.id/product/90b35b79-7548-4c02-b006-953f11870ebc" class="btn-buy">PESAN</a>
             </div>
           </div>
         </div>
@@ -272,7 +270,7 @@
               <li>harga asli Rp. 360.000</li>
             </ul>
             <div class="btn-wrap">
-              <a href="#" class="btn-buy">PESAN</a>
+              <a href="https://tokoko.id/product/4f362ab4-7203-4ed2-bf1f-1cabf919573e" class="btn-buy">PESAN</a>
             </div>
           </div>
         </div>
@@ -286,7 +284,7 @@
               <li>harga asli Rp. 540.000</li>
             </ul>
             <div class="btn-wrap">
-              <a href="#" class="btn-buy">PESAN</a>
+              <a href="https://tokoko.id/product/4f66c254-3106-4d5c-80ae-3185b1a0626b" class="btn-buy">PESAN</a>
             </div>
           </div>
         </div>
@@ -300,11 +298,10 @@
   
   <section class="terjual" id="terjual">
     <div class="title" data-aos="flip-up">
-      <!-- <h2 class="titletext">Jelly Gamat Gold-G Asli</h2> -->
-      <p>"Ratusan ribu orang telah merasakan keberhasilan mengatasi penyakit mereka. Inilah yang mendorong kami untuk lebih berupaya memperkenalkan produk kesehatan ini di Indonesia,” </p>
-      <a href="#p" class="btn">Tanya Penjual</a>
+      <p>"Ratusan ribu orang telah merasakan keberhasilan mengatasi penyakit mereka. Inilah yang mendorong kami untuk lebih berupaya memperkenalkan produk kesehatan ini di Indonesia,” </p> <br> 
+      <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn">Tanya Penjual</a>
       <div class="container">
-        <img src="img/indonesia1.jpeg" alt="">
+        <img src="img/indonesia1.jpeg" alt="ratusan ribu oeang telah merasakan manfaat jelly gamat gold di seluruh Indonesia">
       </div>
     </div> 
   </section>
