--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="textBox">
         <h2><span> Jelly Gamat <br> Gold-G</span> </h2>
-        <p>Rasakan kemudahan khasiat dan manfaat jelly gamat. <br> Lebih mudah dan murah beli jelly gamat di jelly gamat online. <br> Bermanfaat meredakan sakit karena kolesterol, darah tinggi, diabetes. Berkhasiat  menjaga, merawat dan memulihkan kesehatan tubuh, pencernaan dan organ dalam serta berbagai manfaat lainnya</p>
+        <p>Tidak repot beli jelly gamat dengan beli jelly gamat di jelly gamat online. Rasakan manfaat dan khasiat jelly gamat dari jelly gamat online. Lebih mudah dan murah serta tetap sehat dengan suplemen jelly gamat</p>
         <a href="#pricing" class="btn">Pesan Sekarang</a>
       </div>
     </div>
