--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="contentBx">
             <div class="content">
               <ul>
-                <p>Protein yang tinggi pada gamat melindugni dari penyakit kardiovaskular</p>
+                <p>Protein Yang Tinggi pada gamat melindugni dari penyakit kardiovaskular</p>
                 <p>Mengobati dan meredakan penyakit Jantung & Stroke</p>
                 <p>Menjaga dan memulihkan kesehatan organ Hati, Ginjal, Lambung dan organ lainnya</p>
               </ul>
@@ -102,7 +102,7 @@
           <div class="contentBx">
             <div class="content">
               <ul>
-                <p>Mengandung lemak sehat yang mengurangi kadar kolesterol</p>
+                <p>Mengandung Lemak Sehat yang mengurangi kadar kolesterol</p>
                 <p>Membersihkan saluran darah, mempercepat pembangunan jaringan sel tubuh</p>
                 <p>Menunjang kinerja vitamin, mineral yang diserap tubuh</p>
               </ul>
@@ -116,13 +116,70 @@
           <div class="contentBx">
             <div class="content">
               <ul>
-                <p>Rantai asam lemak tak jenuh dan kolagen pada gamat bernmanfaat untuk menumbuhkan jaringan tubuh saat luka</p>
+                <p>Rantai asam lemak tak jenuh dan Kolagen pada gamat bernmanfaat untuk menumbuhkan jaringan tubuh saat luka</p>
                 <p>Mempercepat pembentukan lapisan kulit (luka luar dan dalam) seperti luka sehabis operasi</p>
               </ul>
             </div>
           </div>
         </div>
       </div>
+  </section>
+
+  <section class="obat" id="obat">
+    <div class="title" data-aos="flip-up">
+      <h2> Obat Untuk Luka </h2>
+      <p> Kandungan ekstrak Teripang pada Jelly Gamat mengandung rantai asam lemak tak jenuh yang bermanfaat untuk menumbuhkan jaringan tubuh saat terluka, baik luka terbuka ataupun luka dalam sehabis operasi </p>
+      <p> Mengandung <a href="https://www.gooddoctor.co.id/tips-kesehatan/nutrisi/kolagen-adalah-protein-yang-memiliki-manfaat-untuk-kulit/" target="_blank"> kolagen </a> yang merupakan zat pembentuk lapisan kulit </p> 
+      <p> Terbuat dari bahan alami yang aman di konsumsi untuk orang tua, anak-anak, ibu hamil dan menyusui bayi </p>
+      <h2> Obat Untuk Maag </h2>
+      <p> <a href="https://id.wikipedia.org/wiki/Maag" target="_blank">Maag </a> atau radang lambung atau tukak lambung adalah gejala penyakit yang menyerang lambung dikarenakan terjadi luka atau peradangan pada lambung yang menyebabkan sakit, mulas, dan perih pada perut. </p>
+      <p>Penyebabnya bisa karena penderita makan secara tidak teratur, terdapat mikroorganisme yang merugikan, mengonsumsi obat-obatan tertentu,atau sebab-sebab lainnya seperti mengonsumsi alkohol, pola tidur yang tidak teratur dan stress.
+      Maag juga bisa terjadi apabila si penderita telat makan, kemudian sewaktu makan si penderita maag makan dengan porsi yang terlalu banyak. Kandungan asam lemak yang terdapat pada jelly gamat mampu mengobati dan memperbaiki luka yang terjadi di lambung </p>
+      <h2> Obat Kolesterol Alami </h2>
+      <p> Penyakit  <a href="https://id.wikipedia.org/wiki/Serangan_jantung" target="_blank"> kolesterol</a> terjadi disebabkan karena  adanya lemak (plak) yang menumpuk di pembuluh yang mengganggu aliran darah. Penyebabnya dikareanakan makanan yang mengandung lemak jenuh dan kurangnya berolahraga.</p> 
+      <p> Sari Timun Laut Alami Jelly Gamat membantu mengurangi dan membersihkan plak di pembuluh darah menjadikannya sebagai obat kolesterol alami</p>
+      <h2> Obat Untuk Penderita Diabetes </h2>
+      <p>  Kandungan protein pada Jelly Gamat menjadikannya obat yang bermanfaat untuk penderita <a href="https://id.wikipedia.org/wiki/Diabetes_melitus" target="_blank"> diabetes</a> karena dinilai mampu mengontrol gula darah di dalam tubuh </p>
+    </div> 
+  </section>
+
+  <section class="about" id="about">
+    <div class="row" data-aos="fade-left">
+      <div class="col50">
+        <ul>
+          <p>
+            Jelly Gamat Gold G Asli
+            bebas dari garam dan menghasilkan rasa tawar.
+            Tidak berbau, 
+            Berbentuk Cairan Mengental,
+            Tidak Berwarna,
+            Warna label lebih terang dan tajam (terutama di bagian gradasi logo GNE dan tulisan Gold G.),
+            Tulisan Gold G di botol lebih kecil dan rapi,
+            Kualitas botol lebih tebal,
+            Bentuk botol lebih besar,
+            Dasar botol rata dan seimbang
+          </p>
+          <br>
+          <p>
+            Sedangkan Jelly Gamat Gold G Yang Palsu Mempunyai Ciri-Ciri :
+            Berbau,
+            Rasa asam,
+            Berwarna keruh,
+            Cairannya Berair
+            Warna label tidak terang dan tajam tidk ada gradasi di bagian logo GNE, tulisan Gold G, harga dan teripang lebih gelap warnanya,
+            Tulisan embol Gold G lebih besar dan kasar,
+            Kualitas botol lebih tipis dan Bentuk botol lebih kecil,
+            Dasar botol tidk rata dan tampak bulat,
+            Harga jauh lebih murah, biasanya Rp.100.000 / botol dengan tidak memiliki syarat apapun,
+          </p>
+        </ul>
+      </div>
+      <div class="col50">
+        <div class="imgBx">
+          <img src="img/tiruan.jpg" alt="manfaat gamat teripag timun laut">
+        </div>
+      </div>
+    </div>
   </section>
 
   
