--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
     </div> 
   </section>
 
-  <section class="about" id="about">
+  <section class="asli" id="asli">
     <div class="row" data-aos="fade-left">
       <div class="col50">
         <ul>
           <p>
             Jelly Gamat Gold G Asli
-            bebas dari garam dan menghasilkan rasa tawar.
-            Tidak berbau, 
+            Bebas dari garam dan menghasilkan rasa tawar,
+            Tidak berbau,
             Berbentuk Cairan Mengental,
             Tidak Berwarna,
             Warna label lebih terang dan tajam (terutama di bagian gradasi logo GNE dan tulisan Gold G.),
@@ -168,9 +168,7 @@
             Cairannya Berair
             Warna label tidak terang dan tajam tidk ada gradasi di bagian logo GNE, tulisan Gold G, harga dan teripang lebih gelap warnanya,
             Tulisan embol Gold G lebih besar dan kasar,
-            Kualitas botol lebih tipis dan Bentuk botol lebih kecil,
-            Dasar botol tidk rata dan tampak bulat,
-            Harga jauh lebih murah, biasanya Rp.100.000 / botol dengan tidak memiliki syarat apapun,
+            Kualitas botol lebih tipis dan Bentuk botol lebih kecil
           </p>
         </ul>
       </div>
