--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
         </div>
         <div class="item">
           <div class="question">
+            Bagaimana cara minum jelly gamat ?
+            <span>
+              <span>+</span>
+              <span>-</span>
+            </span>
+          </div>
+          <div class="answer">
+            <p>Dosis konsumsi jelly gamat pada orang dewasa adalah 2 kali sehari 2 – 3 sendok makan dan diminum setelah makan</p>
+            <p>Jelly gamat juga dapat dikonsumsi oleh bayi dan anak-anak. Pada bayi minimal 2 bulan, bisa mengonsumsi jelly gamat 2 kali sehari dengan takaran ½ sendok teh dan dikonsumsi setelah makan. <br> <br> Sedangkan pada anak-anak, jelly gamat dapat dikonsumsi dengan dosis 2 kali sehari 1 – 2 sendok teh dan dikonsumsi setelah makan.</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="question">
             Berapa harga jelly gamat gold ?
             <span>
               <span>+</span>
@@ -248,15 +261,18 @@
         </div>
         <div class="item">
           <div class="question">
-            Bagaimana cara minum jelly gamat ?
+            Kenapa harga jelly gamat relatif mahal ?
             <span>
               <span>+</span>
               <span>-</span>
             </span>
           </div>
           <div class="answer">
-            <p>Dosis konsumsi jelly gamat pada orang dewasa adalah 2 kali sehari 2 – 3 sendok makan dan diminum setelah makan</p>
-            <p>Jelly gamat juga dapat dikonsumsi oleh bayi dan anak-anak. Pada bayi minimal 2 bulan, bisa mengonsumsi jelly gamat 2 kali sehari dengan takaran ½ sendok teh dan dikonsumsi setelah makan. <br> <br> Sedangkan pada anak-anak, jelly gamat dapat dikonsumsi dengan dosis 2 kali sehari 1 – 2 sendok teh dan dikonsumsi setelah makan.</p>
+            <p> Harga jelly gamat memang relatif mahal karena bahan dasarnya terbuat dari teripang yang harganya juga relatif mahal </p> <p>
+              Satu kilonya seharga lebih dari 3.000 dolar Amerika Serikat atau sekitar Rp 50.000.000-an (kurs April 2020) atau Rp Rp 44.000.000-an (kurs Januari 2019).
+            </p>
+            <p>Saking berharganya, orang-orang rela mempertaruhkan nyawa mereka untuk menyelam demi mendapatkan teripang.
+            </p>
           </div>
         </div>
       </div>
@@ -278,17 +294,6 @@
         });
       }
     </script>
-  </section>
-
-  <!-- Legalitas -->
-  <section class="legalitas" id="legalitas">
-    <div class="title" data-aos="flip-up">
-      <h2 class="titletext">Jelly Gamat Gold-G Asli</h2>
-      <p>Jelly Gamat yang asli sudah memiliki izin dan terdaftar di situs resmi Badan Pengawan Obat dan Makanan Republik Indonesia (BPOM)
-      <div class="container">
-        <img src="img/bpom.png" alt="gamat asli terdaftar pada badan pengawan obat dan makanan republik Indonesia">
-      </div>
-    </div> 
   </section>
 
 
@@ -350,6 +355,17 @@
     </div>
   </section>
   <!-- End Pricing Section -->
+
+  <!-- Legalitas -->
+  <section class="legalitas" id="legalitas">
+    <div class="title" data-aos="flip-up">
+      <h2 class="titletext">Jelly Gamat Gold-G Asli</h2>
+      <p>Jelly Gamat yang asli sudah memiliki izin dan terdaftar di situs resmi Badan Pengawan Obat dan Makanan Republik Indonesia (BPOM)
+      <div class="container">
+        <img src="img/bpom.png" alt="gamat asli terdaftar pada badan pengawan obat dan makanan republik Indonesia">
+      </div>
+    </div> 
+  </section>
 
   
   <section class="terjual" id="terjual">
