--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <li>harga asli Rp. 180.000</li>
             </ul>
             <div class="btn-wrap">
-              <a href="https://tokoko.id/product/90b35b79-7548-4c02-b006-953f11870ebc" class="btn-buy">PESAN</a>
+              <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn-buy">PESAN</a>
             </div>
           </div>
         </div>
@@ -331,7 +331,7 @@
               <li>harga asli Rp. 360.000</li>
             </ul>
             <div class="btn-wrap">
-              <a href="https://tokoko.id/product/4f362ab4-7203-4ed2-bf1f-1cabf919573e" class="btn-buy">PESAN</a>
+              <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn-buy">PESAN</a>
             </div>
           </div>
         </div>
@@ -345,7 +345,7 @@
               <li>harga asli Rp. 540.000</li>
             </ul>
             <div class="btn-wrap">
-              <a href="https://tokoko.id/product/4f66c254-3106-4d5c-80ae-3185b1a0626b" class="btn-buy">PESAN</a>
+              <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn-buy">PESAN</a>
             </div>
           </div>
         </div>
