--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="textBox">
         <h2><span> Jelly Gamat <br> Gold-G</span> </h2>
-        <p>Tidak repot beli jelly gamat dengan beli jelly gamat di jelly gamat online. Rasakan manfaat dan khasiat jelly gamat dari jelly gamat online. Lebih mudah dan murah serta tetap sehat dengan suplemen jelly gamat</p>
+        <p>Jelly Gamat adalah obat herbal untuk mempercepat penyembuhan luka, meringankan nyeri sendi, menyehatkan kulit, menurunkan kolesterol tinggi dan tekanan darah tinggi, memperbaiki kerusakan hati (liver) dan jantung, meredakan gangguan pencernaan, dan lain sebagainya. </p>
         <a href="#pricing" class="btn">Pesan Sekarang</a>
       </div>
     </div>
@@ -142,44 +142,6 @@
       <p>  Kandungan protein pada Jelly Gamat menjadikannya obat yang bermanfaat untuk penderita <a href="https://id.wikipedia.org/wiki/Diabetes_melitus" target="_blank"> diabetes</a> karena dinilai mampu mengontrol gula darah di dalam tubuh </p>
     </div> 
   </section>
-
-  <section class="asli" id="asli">
-    <div class="row" data-aos="fade-left">
-      <div class="col50">
-        <ul>
-          <p>
-            Jelly Gamat Gold G Asli
-            Bebas dari garam dan menghasilkan rasa tawar,
-            Tidak berbau,
-            Berbentuk Cairan Mengental,
-            Tidak Berwarna,
-            Warna label lebih terang dan tajam (terutama di bagian gradasi logo GNE dan tulisan Gold G.),
-            Tulisan Gold G di botol lebih kecil dan rapi,
-            Kualitas botol lebih tebal,
-            Bentuk botol lebih besar,
-            Dasar botol rata dan seimbang
-          </p>
-          <br>
-          <p>
-            Sedangkan Jelly Gamat Gold G Yang Palsu Mempunyai Ciri-Ciri :
-            Berbau,
-            Rasa asam,
-            Berwarna keruh,
-            Cairannya Berair
-            Warna label tidak terang dan tajam tidk ada gradasi di bagian logo GNE, tulisan Gold G, harga dan teripang lebih gelap warnanya,
-            Tulisan embol Gold G lebih besar dan kasar,
-            Kualitas botol lebih tipis dan Bentuk botol lebih kecil
-          </p>
-        </ul>
-      </div>
-      <div class="col50">
-        <div class="imgBx">
-          <img src="img/tiruan.jpg" alt="manfaat gamat teripag timun laut">
-        </div>
-      </div>
-    </div>
-  </section>
-
   
   <!-- pertanyaan -->
   <section class="pertanyaan" id="pertanyaan">
@@ -208,30 +170,7 @@
             </span>
           </div>
           <div class="answer">
-            <p>Manfaat jelly gamat Gold-G yaitu dapat meningkatkan daya tahan tubuh, meredakan gangguan sakit lambung, mempercepat penyembuhan luka pada penyakit diabetes serta menghilangkan bau pada luka gangren
-            </p>
-            <p>Jelly gamat Gold-G dapat meringankan sakit pada persendian, menghentikan pendarahan pada wasir, mempercepat penyembuhan pasca operasi maupun bersalin, menurunkan kadar kolesterol dan trigliserida, meringankan penyakit asma, memperbaiki tekstur kulit dan manfaat lainnya </p>
-          </div>
-        </div>
-        <div class="item">
-          <div class="question">
-            Gamat untuk penyakit apa ?
-            <span>
-              <span>+</span>
-              <span>-</span>
-            </span>
-          </div>
-          <div class="answer">
-            <p>
-              Mempercepat penyembuhan luka,
-              meredakan nyeri sendi,
-              menurunkan kolesterol tinggi,
-              menurunkan tekanan darah tinggi,
-              memperbaiki kerusakan hati dan jantung,
-              meredakan gangguan pencernaan,
-              menyehatkan dan memperbaiki tekstur kulit,
-              dan berbagai manfaat lainnya
-          </p>
+            <p>Jelly Gamat adalah obat herbal untuk mempercepat penyembuhan luka, meringankan nyeri sendi, menyehatkan kulit, menurunkan kolesterol tinggi dan tekanan darah tinggi, memperbaiki kerusakan hati (liver) dan jantung, meredakan gangguan pencernaan, dan lain sebagainya.</p>
           </div>
         </div>
         <div class="item">
@@ -271,11 +210,12 @@
             <p> Harga jelly gamat memang relatif mahal karena bahan dasarnya terbuat dari teripang yang harganya juga relatif mahal </p> <p>
               Satu kilonya seharga lebih dari 3.000 dolar Amerika Serikat atau sekitar Rp 50.000.000-an (kurs April 2020) atau Rp Rp 44.000.000-an (kurs Januari 2019).
             </p>
-            <p>Saking berharganya, orang-orang rela mempertaruhkan nyawa mereka untuk menyelam demi mendapatkan teripang.
+            <p>Hal ini disebabkan karena kesulitnya mendapatkan teripang yang hidup di dasar lautan
             </p>
           </div>
         </div>
       </div>
+      <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn">Tanya Penjual</a>
     </div>
 
     <script>
@@ -314,7 +254,7 @@
             <h4><sup>Rp</sup>145.000</h4>
             <ul>
               <li>Diskon sebesar 19%</li>
-              <li>harga asli Rp. 180.000</li>
+              <li>harga umum Rp. 180.000</li>
             </ul>
             <div class="btn-wrap">
               <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn-buy">PESAN</a>
@@ -328,7 +268,7 @@
             <h4><sup>Rp</sup>280.000</h4>
             <ul>
               <li>Diskon sebesar 22%</li>
-              <li>harga asli Rp. 360.000</li>
+              <li>harga umum Rp. 360.000</li>
             </ul>
             <div class="btn-wrap">
               <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn-buy">PESAN</a>
@@ -342,7 +282,7 @@
             <h4><sup>Rp</sup>400.000</h4>
             <ul>
               <li>Diskon sebesar 25%</li>
-              <li>harga asli Rp. 540.000</li>
+              <li>harga umum Rp. 540.000</li>
             </ul>
             <div class="btn-wrap">
               <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn-buy">PESAN</a>
@@ -359,7 +299,6 @@
   <section class="terjual" id="terjual">
     <div class="title" data-aos="flip-up">
       <p>"Ratusan ribu orang telah merasakan keberhasilan mengatasi penyakit mereka. Inilah yang mendorong kami untuk lebih berupaya memperkenalkan produk kesehatan ini di Indonesia,” </p> <br> 
-      <a href="https://api.whatsapp.com/send?phone=6285155032886" target="_blank" class="btn">Tanya Penjual</a>
       <div class="container">
         <img src="img/indonesia1.jpeg" alt="ratusan ribu oeang telah merasakan manfaat jelly gamat gold di seluruh Indonesia">
       </div>
@@ -375,6 +314,47 @@
         <img src="img/bpom.png" alt="gamat asli terdaftar pada badan pengawan obat dan makanan republik Indonesia">
       </div>
     </div> 
+  </section>
+
+  <section class="asli" id="asli">
+    <div class="row" data-aos="fade-left">
+      <div class="col50">
+        <ul>
+          <p>Agar tidak tertipu saat memesan Jelly Gamat  <br> berikut cir-ciri untuk membedakan Jelly Gamat yang Asli dengan yang palsu</p> <br>
+          <p> <b>Perhatian!</b></p>
+          <p> <b> Mengkonsumsi jelly gamat tiruan tidak hanya merugikan tetapi juga berbahaya untuk kesehatan</p> </b> <br>
+          <p>Pesan jelly gamat asli di sini dengan ciri-ciri jelly gamat asli :</p> <br>
+          <p>
+            Jelly Gamat Gold G Asli
+            Bebas dari garam dan menghasilkan rasa tawar,
+            Tidak berbau,
+            Berbentuk Cairan Mengental,
+            Tidak Berwarna,
+            Warna label lebih terang dan tajam (terutama di bagian gradasi logo GNE dan tulisan Gold G.),
+            Tulisan Gold G di botol lebih kecil dan rapi,
+            Kualitas botol lebih tebal,
+            Bentuk botol lebih besar,
+            Dasar botol rata dan seimbang
+          </p>
+          <br>
+          <p>
+            Sedangkan Jelly Gamat Gold G Yang Palsu Mempunyai Ciri-Ciri :
+            Berbau,
+            Rasa asam,
+            Berwarna keruh,
+            Cairannya Berair
+            Warna label tidak terang dan tajam tidk ada gradasi di bagian logo GNE, tulisan Gold G, harga dan teripang lebih gelap warnanya,
+            Tulisan embol Gold G lebih besar dan kasar,
+            Kualitas botol lebih tipis dan Bentuk botol lebih kecil
+          </p>
+        </ul>
+      </div>
+      <div class="col50">
+        <div class="imgBx">
+          <img src="img/tiruan.jpg" alt="manfaat gamat teripag timun laut">
+        </div>
+      </div>
+    </div>
   </section>
 
 
