--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="textBox">
         <h2><span> Jelly Gamat <br> Gold-G</span> </h2>
         <p>Jelly Gamat adalah obat herbal untuk mempercepat penyembuhan luka, meringankan nyeri sendi, menyehatkan kulit, menurunkan kolesterol tinggi dan tekanan darah tinggi, memperbaiki kerusakan hati (liver) dan jantung, meredakan gangguan pencernaan, dan lain sebagainya. </p>
-        <a href="#pricing" class="btn">Pesan Sekarang</a>
+        <!-- <a href="#pricing" class="btn">Pesan Sekarang</a> -->
       </div>
     </div>
   </section>
