--- a/index.html
+++ b/index.html
@@ -47,23 +47,14 @@
   <section class="about" id="about">
     <div class="row" data-aos="fade-left">
       <div class="col50">
-        <!-- <h2 class="titleText">Tentang Gamat</h2> -->
+        <h2>Kenapa Gamat Cocok Untuk Dijadikan Sebagai Obat ?</h2>
         <ul>
-          <p>
-            Gamat, teripang, timun laut atau sea cucumber merujuk kepada sejenis hewan yang hidup di dasar
-            laut dalam kelas Holothuroidea
-          </p> <br>
+          <br>
           <p>
             Gamat sering dijadikan sebagai minyak obat disebabkan ketahanannya yang mampu hidup walaupun dipotong
-            dua
+            dua serta banyaknya zat yang bermanfaat yang baik untuk kesehatan tubuh pada gamat
           </p>
           <br>
-          <!-- <p>
-            Gamat sedari dulu sering dijadikan obat bagi merawat luka agar cepat sembuh,
-            meringankan nyeri sendi, menyehatkan kulit, dan lain sebagainya</p> <br> -->
-          <p>Gamat dapat menurunkan kolesterol tinggi dan tekanan darah tinggi, memperbaiki kerusakan hati (liver) dan
-            jantung, meredakan gangguan pencernaan, dan banyak lagi manfaat lainnya.
-          </p>
         </ul>
       </div>
       <div class="col50">
