--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
             <h3>Harga 1 Botol</h3>
             <h4><sup>Rp</sup>145.000</h4>
             <ul>
+              <li>Paket 1 Botol</li>
               <li>Diskon sebesar 19%</li>
               <li>harga umum Rp. 180.000</li>
             </ul>
@@ -258,6 +259,7 @@
             <h3>Harga 2 Botol</h3>
             <h4><sup>Rp</sup>280.000</h4>
             <ul>
+              <li>Paket 2 Botol</li>
               <li>Diskon sebesar 22%</li>
               <li>harga umum Rp. 360.000</li>
             </ul>
@@ -269,10 +271,11 @@
 
         <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
           <div class="box" data-aos="fade-up" data-aos-delay="300">
-            <h3>Harga 3 Botol</h3>
-            <h4><sup>Rp</sup>400.000</h4>
+            <h3>PROMO TERBATAS</h3>
+            <h4><sup>Rp</sup>300.000</h4>
             <ul>
-              <li>Diskon sebesar 25%</li>
+              <li>Paket 3 Botol</li>
+              <li>Diskon sebesar 44%</li>
               <li>harga umum Rp. 540.000</li>
             </ul>
             <div class="btn-wrap">
@@ -280,9 +283,8 @@
             </div>
           </div>
         </div>
-
+        
       </div>
-
     </div>
   </section>
   <!-- End Pricing Section -->
